--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "multiplayer game",
+  "name": "jogo multiplayer incrível",
   "icons": [
     {
       "src": "favicon.ico",
