--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,29 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "build/index.js",
-    "scripts": {
-        "build": "babel src --out-dir build"
-    },
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-        "@babel/plugin-syntax-typescript": "^7.20.0",
-        "@geckos.io/server": "^2.3.0",
-        "@types/node": "^14.14.9",
-        "nodemon": "^2.0.20",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.21.0",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-typescript": "^7.21.0"
-    }
+  "name": "phaser-multiplayer-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "scripts": {
+    "build:compile": "npx babel src --extensions .ts --out-dir lib --source-maps",
+    "build:types": "tsc",
+    "build": "concurrently npm:build:*",
+    "watch:compile": "npx babel src --extensions .ts --out-dir lib --source-maps --watch",
+    "watch:types": "tsc --watch",
+    "watch": "concurrently npm:watch:*",
+    "start": "node lib/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "concurrently": "^6.2.1"
+  },
+  "dependencies": {
+    "@geckos.io/server": "^2.3.0"
+  }
 }
