--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,15 +5,15 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: cd server && npm install
-    command: npm run start
+  - init: cd server && npm install && npm run watch
+    command: cd client && npm start
 ports:
   - name: client
     port: 3000
     onOpen: ignore
     visibility: private
   - name: server
-    port: 2567
+    port: 9208
     onOpen: ignore
     visibility: public
 
