--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "concurrently": "^6.2.1"
   },
   "dependencies": {
+    "@geckos.io/phaser-on-nodejs": "^1.2.8",
     "@geckos.io/server": "^2.3.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "phaser": "^3.55.2"
   }
 }
