AGORA FUNCIONA SABAGAÇA

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@geckos.io/phaser-on-nodejs": "^1.2.8",
     "@geckos.io/server": "^2.3.0",
     "nodemon": "^2.0.20",
+    "node": "16.15.1",
     "phaser": "^3.55.2"
   }
 }
